--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,33 @@
 
-buildscript {
-    ext.kotlin_version = '1.2.21'
-    repositories {
-        mavenLocal()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+plugins {
+    id 'java'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '4.0.3'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+    id 'org.openjfx.javafxplugin' version '0.0.5'
 }
 
-apply plugin: "kotlin"
-apply plugin: 'application'
+application.mainClassName = "Launcher"
 
-mainClassName = "Launcher"
+group 'com.github.karlfish'
+version '1.0-SNAPSHOT'
+
+sourceCompatibility = 1.8
 
 repositories {
-    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    compile 'no.tornado:tornadofx:1.7.11'
-    compile 'no.tornado:tornadofx-controls:1.0.5'
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    testCompile 'junit:junit:4.12'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile 'no.tornado:tornadofx:1.7.17'
 }
 
-// No current plans for a jar
-// jar {
-//     manifest {
-//         attributes(
-//                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-//                 'Main-Class': 'com.karlfish.app.MyApp'
-//         )
-//     }
-//     from configurations.compile.collect { entry -> zipTree(entry) }
-// }
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+javafx {
+    modules = [ 'javafx.controls' ]
+}
+
